// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: all 1`] = `
"
ᄀ(U+1100), 4352 - ᇿ(U+11FF), 4607
⺀(U+2E80), 11904 - ⺙(U+2E99), 11929
⺛(U+2E9B), 11931 - ⻳(U+2EF3), 12019
⼀(U+2F00), 12032 - ⿕(U+2FD5), 12245
⿰(U+2FF0), 12272 - 〿(U+303F), 12351
ぁ(U+3041), 12353 - ゖ(U+3096), 12438
ゝ(U+309D), 12445 - ゟ(U+309F), 12447
ァ(U+30A1), 12449 - ヺ(U+30FA), 12538
ヽ(U+30FD), 12541 - ヿ(U+30FF), 12543
ㄅ(U+3105), 12549 - ㄯ(U+312F), 12591
ㄱ(U+3131), 12593 - ㆎ(U+318E), 12686
㆐(U+3190), 12688 - 䶿(U+4DBF), 19903
一(U+4E00), 19968 - 鿿(U+9FFF), 40959
ꥠ(U+A960), 43360 - ꥼ(U+A97C), 43388
가(U+AC00), 44032 - 힣(U+D7A3), 55203
ힰ(U+D7B0), 55216 - ퟆ(U+D7C6), 55238
ퟋ(U+D7CB), 55243 - ퟻ(U+D7FB), 55291
豈(U+F900), 63744 - 舘(U+FA6D), 64109
並(U+FA70), 64112 - 龎(U+FAD9), 64217
︐(U+FE10), 65040 - ︟(U+FE1F), 65055
︰(U+FE30), 65072 - ﹯(U+FE6F), 65135
＀(U+FF00), 65280 - ￯(U+FFEF), 65519
𖿣(U+16FE3), 94179 - 𖿣(U+16FE3), 94179
𚿰(U+1AFF0), 110576 - 𚿳(U+1AFF3), 110579
𚿵(U+1AFF5), 110581 - 𚿻(U+1AFFB), 110587
𚿽(U+1AFFD), 110589 - 𚿾(U+1AFFE), 110590
𛀀(U+1B000), 110592 - 𛄢(U+1B122), 110882
𛄲(U+1B132), 110898 - 𛄲(U+1B132), 110898
𛅐(U+1B150), 110928 - 𛅒(U+1B152), 110930
𛅕(U+1B155), 110933 - 𛅕(U+1B155), 110933
𛅤(U+1B164), 110948 - 𛅧(U+1B167), 110951
🈀(U+1F200), 127488 - 🈀(U+1F200), 127488
𠀀(U+20000), 131072 - 𪛟(U+2A6DF), 173791
𪜀(U+2A700), 173824 - 𫜹(U+2B739), 177977
𫝀(U+2B740), 177984 - 𫠝(U+2B81D), 178205
𫠠(U+2B820), 178208 - 𬺡(U+2CEA1), 183969
𬺰(U+2CEB0), 183984 - 𮯠(U+2EBE0), 191456
𮯰(U+2EBF0), 191472 - 𮹝(U+2EE5D), 192093
丽(U+2F800), 194560 - 𪘀(U+2FA1D), 195101
𰀀(U+30000), 196608 - 𱍊(U+3134A), 201546
𱍐(U+31350), 201552 - 𲎯(U+323AF), 205743
"
`;

exports[`Snapshot: letters 1`] = `
"
ᄀ(U+1100), 4352 - ᇿ(U+11FF), 4607
⺀(U+2E80), 11904 - ⺙(U+2E99), 11929
⺛(U+2E9B), 11931 - ⻳(U+2EF3), 12019
⼀(U+2F00), 12032 - ⿕(U+2FD5), 12245
々(U+3005), 12293 - 々(U+3005), 12293
〇(U+3007), 12295 - 〇(U+3007), 12295
〡(U+3021), 12321 - 〩(U+3029), 12329
〸(U+3038), 12344 - 〻(U+303B), 12347
ぁ(U+3041), 12353 - ゖ(U+3096), 12438
ゝ(U+309D), 12445 - ゟ(U+309F), 12447
ァ(U+30A1), 12449 - ヺ(U+30FA), 12538
ヽ(U+30FD), 12541 - ヿ(U+30FF), 12543
ㄅ(U+3105), 12549 - ㄯ(U+312F), 12591
ㄱ(U+3131), 12593 - ㆎ(U+318E), 12686
ㆠ(U+31A0), 12704 - ㆿ(U+31BF), 12735
ㇰ(U+31F0), 12784 - ㈞(U+321E), 12830
㉠(U+3260), 12896 - ㉾(U+327E), 12926
㋐(U+32D0), 13008 - ㋾(U+32FE), 13054
㌀(U+3300), 13056 - ㍗(U+3357), 13143
㐀(U+3400), 13312 - 䶿(U+4DBF), 19903
一(U+4E00), 19968 - 鿿(U+9FFF), 40959
ꥠ(U+A960), 43360 - ꥼ(U+A97C), 43388
가(U+AC00), 44032 - 힣(U+D7A3), 55203
ힰ(U+D7B0), 55216 - ퟆ(U+D7C6), 55238
ퟋ(U+D7CB), 55243 - ퟻ(U+D7FB), 55291
豈(U+F900), 63744 - 舘(U+FA6D), 64109
並(U+FA70), 64112 - 龎(U+FAD9), 64217
ｦ(U+FF66), 65382 - ｯ(U+FF6F), 65391
ｱ(U+FF71), 65393 - ﾝ(U+FF9D), 65437
ﾠ(U+FFA0), 65440 - ﾾ(U+FFBE), 65470
ￂ(U+FFC2), 65474 - ￇ(U+FFC7), 65479
ￊ(U+FFCA), 65482 - ￏ(U+FFCF), 65487
ￒ(U+FFD2), 65490 - ￗ(U+FFD7), 65495
ￚ(U+FFDA), 65498 - ￜ(U+FFDC), 65500
𖿣(U+16FE3), 94179 - 𖿣(U+16FE3), 94179
𚿰(U+1AFF0), 110576 - 𚿳(U+1AFF3), 110579
𚿵(U+1AFF5), 110581 - 𚿻(U+1AFFB), 110587
𚿽(U+1AFFD), 110589 - 𚿾(U+1AFFE), 110590
𛀀(U+1B000), 110592 - 𛄢(U+1B122), 110882
𛄲(U+1B132), 110898 - 𛄲(U+1B132), 110898
𛅐(U+1B150), 110928 - 𛅒(U+1B152), 110930
𛅕(U+1B155), 110933 - 𛅕(U+1B155), 110933
𛅤(U+1B164), 110948 - 𛅧(U+1B167), 110951
🈀(U+1F200), 127488 - 🈀(U+1F200), 127488
𠀀(U+20000), 131072 - 𪛟(U+2A6DF), 173791
𪜀(U+2A700), 173824 - 𫜹(U+2B739), 177977
𫝀(U+2B740), 177984 - 𫠝(U+2B81D), 178205
𫠠(U+2B820), 178208 - 𬺡(U+2CEA1), 183969
𬺰(U+2CEB0), 183984 - 𮯠(U+2EBE0), 191456
𮯰(U+2EBF0), 191472 - 𮹝(U+2EE5D), 192093
丽(U+2F800), 194560 - 𪘀(U+2FA1D), 195101
𰀀(U+30000), 196608 - 𱍊(U+3134A), 201546
𱍐(U+31350), 201552 - 𲎯(U+323AF), 205743
"
`;

exports[`Snapshot: punctuations 1`] = `
"
⿰(U+2FF0), 12272 - 〄(U+3004), 12292
〆(U+3006), 12294 - 〆(U+3006), 12294
〈(U+3008), 12296 - 〠(U+3020), 12320
〪(U+302A), 12330 - 〷(U+3037), 12343
〼(U+303C), 12348 - 〿(U+303F), 12351
㆐(U+3190), 12688 - ㆟(U+319F), 12703
㇀(U+31C0), 12736 - ㇯(U+31EF), 12783
㈟(U+321F), 12831 - ㉟(U+325F), 12895
㉿(U+327F), 12927 - ㋏(U+32CF), 13007
㋿(U+32FF), 13055 - ㋿(U+32FF), 13055
㍘(U+3358), 13144 - ㏿(U+33FF), 13311
︐(U+FE10), 65040 - ︟(U+FE1F), 65055
︰(U+FE30), 65072 - ﹯(U+FE6F), 65135
＀(U+FF00), 65280 - ･(U+FF65), 65381
ｰ(U+FF70), 65392 - ｰ(U+FF70), 65392
ﾞ(U+FF9E), 65438 - ﾟ(U+FF9F), 65439
﾿(U+FFBF), 65471 - ￁(U+FFC1), 65473
￈(U+FFC8), 65480 - ￉(U+FFC9), 65481
￐(U+FFD0), 65488 - ￑(U+FFD1), 65489
￘(U+FFD8), 65496 - ￙(U+FFD9), 65497
￝(U+FFDD), 65501 - ￯(U+FFEF), 65519
"
`;
